--- a/zabawa-js.html
+++ b/zabawa-js.html
@@ -10,5 +10,6 @@
 <script src="basics.js"></script>
 <script src="operators.js"></script>
 <script src="statements.js"></script>
+<script src="loops.js"></script>
 
 </body>
