--- a/zabawa-js.html
+++ b/zabawa-js.html
@@ -11,5 +11,7 @@
 <script src="operators.js"></script>
 <script src="statements.js"></script>
 <script src="loops.js"></script>
+<script src="arrays.js"></script>
+
 
 </body>
