--- a/zabawa-js.html
+++ b/zabawa-js.html
@@ -12,6 +12,7 @@
 <script src="statements.js"></script>
 <script src="loops.js"></script>
 <script src="arrays.js"></script>
+<script src="functions.js"></script>
 
 
 </body>
