--- a/zabawa-js.html
+++ b/zabawa-js.html
@@ -13,6 +13,7 @@
 <script src="loops.js"></script>
 <script src="arrays.js"></script>
 <script src="functions.js"></script>
+<script src="DOM.js"></script>
 
 
 </body>
