--- a/zabawa-js.html
+++ b/zabawa-js.html
@@ -1,10 +1,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Zabawa z JS</title>
+    <link rel="stylesheet" href="main.css" type="text/css">
+
 </head>
 <body>
 
 <h1>Zabawa z JS</h1>
+
+<button class="show">Show</button>
+<button class="hide">Hide</button>
+<button class="both">Toggle</button>
+<p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo animi quos, blanditiis sequi deserunt similique aliquid cumque ipsam accusamus amet quisquam odit rerum maxime quod culpa id, atque eligendi nobis?
+
+</p>
 
 
 <script src="basics.js"></script>
@@ -13,7 +22,7 @@
 <script src="loops.js"></script>
 <script src="arrays.js"></script>
 <script src="functions.js"></script>
-<script src="DOM.js"></script>
+<script src="section9.js"></script>
 
 
 </body>
