--- a/zabawa-js.html
+++ b/zabawa-js.html
@@ -2,18 +2,34 @@
     <meta charset="UTF-8">
     <title>Zabawa z JS</title>
     <link rel="stylesheet" href="main.css" type="text/css">
+    <link rel="stylesheet" href="project1.css" type="text/css">
 
 </head>
 <body>
 
 <h1>Zabawa z JS</h1>
 
-<button class="show">Show</button>
-<button class="hide">Hide</button>
-<button class="both">Toggle</button>
-<p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo animi quos, blanditiis sequi deserunt similique aliquid cumque ipsam accusamus amet quisquam odit rerum maxime quod culpa id, atque eligendi nobis?
+<section class="beginning">
+    <button class="show">Show</button>
+    <button class="hide">Hide</button>
+    <button class="both">Toggle</button>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo animi quos, blanditiis sequi deserunt similique aliquid cumque ipsam accusamus amet quisquam odit rerum maxime quod culpa id, atque eligendi nobis?
+    </p>
+</section>
 
-</p>
+<section class="project1">
+    <p class="project1-title">Projekt 1: Pomnóż, podziel.</p>
+    <div class="project1-buttons">
+        <button class="multiply-button">Pomnóż przez 2</button>
+        <button class="divide-button">Podziel przez 2</button>
+    </div>      
+
+    <p class="project1-paragraph">Oryginalny wynik to:
+        <span class="original-score"></span>,<br>
+        a nowy wynik to:
+        <span class="new-score"></span>.
+    </p>
+</section>
 
 
 <script src="basics.js"></script>
@@ -23,6 +39,6 @@
 <script src="arrays.js"></script>
 <script src="functions.js"></script>
 <script src="section9.js"></script>
-
+<script src="projects.js"></script>
 
 </body>
