--- a/zabawa-js.html
+++ b/zabawa-js.html
@@ -3,6 +3,7 @@
     <title>Zabawa z JS</title>
     <link rel="stylesheet" href="main.css" type="text/css">
     <link rel="stylesheet" href="project1.css" type="text/css">
+    <link rel="stylesheet" href="projekt2.css" type="text/css">
 
 </head>
 <body>
@@ -30,6 +31,7 @@
         <span class="new-score"></span>.
     </p>
 </section>
+
 
 
 <script src="basics.js"></script>
