--- a/Chowanie obrazka/html.html
+++ b/Chowanie obrazka/html.html
@@ -1,9 +1,20 @@
-<div class="item item1">
-    <div class="background"></div>
-</div>
+<!DOCTYPE html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Projekt2</title>
+        <link rel="stylesheet" href="css.css" type="text/css">
+    </head>
+    <body>
 
-<div class="item item2">
-    <div class="background"></div>
-</div>
+        <div class="item item1">
+            <div class="background"></div>
+        </div>
 
-<section><button class="arrow"><i class="fas fa-arrow-down"></i></button></section>
+        <div class="item item2">
+            <div class="background"></div>
+        </div>
+
+        <section><button class="arrow"><i class="fas fa-arrow-down"></i></button></section>
+
+    </body>
+</html>
