--- a/#2 Chowanie obrazka/html.html
+++ b/#2 Chowanie obrazka/html.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
         <title>Projekt2</title>
         <link rel="stylesheet" href="css.css" type="text/css">
+        <script src="https://kit.fontawesome.com/ecd70ad1d7.js" crossorigin="anonymous"></script>
     </head>
     <body>
 
@@ -16,5 +17,6 @@
 
         <section><button class="arrow"><i class="fas fa-arrow-down"></i></button></section>
 
+        <script src="project2.js"></script>
     </body>
 </html>
