my todo adjustment

--- a/my todo list/index.html
+++ b/my todo list/index.html
@@ -18,8 +18,8 @@
          
         </ul>
 
-        <p>Single click for cross task off<br>
-            Double click for delete</p>
+        <p>Single click for cross task off.<br>
+            Double click for delete.</p>
 
         <script src="main.js"></script>
     </body>
