objects: zadanie jedzonko

--- a/Obiekty/index.html
+++ b/Obiekty/index.html
@@ -8,8 +8,10 @@
     <body>
 
         <h1>Obiekty</h1>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita pariatur aut alias possimus officia libero, id veritatis nesciunt exercitationem deleniti distinctio. Distinctio libero tempore repellat vel facilis accusantium ipsa nisi.</p>
+        <button class="one">1</button>
+        <button class="two">2</button>
+        <button class="three">3</button>
+        <p></p>
 
         <script src="js.js"></script>
     </body>
